--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Sorted Articles</h1>
-    <ul id="band"></ul>
+   <ul id="bands"></ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
